--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -1,6 +1,6 @@
 <div class="container" >
     <div class="card">
-      <img class="img-thumbnail"   src="./assets/imagenes/cerebro.jpg" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail"   src="../assets/imagenes/cerebro.jpg" alt="Avatar" style="width:100%">
       <h1>Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
@@ -14,7 +14,7 @@
     </div>
   
     <div class="card">
-      <img class="img-thumbnail" src="./assets/imagenes/ppt.jpg" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail" src="../assets/imagenes/ppt.png" alt="Avatar" style="width:100%">
       <h1>Piedra Papel o Tijera</h1>
       <p class="title">Juega contra la máquina</p>
       <p>UTN FRA </p>
@@ -26,7 +26,7 @@
       <p>           <button class="button"  (click)="Juego('PPT')">Jugar</button></p>
     </div>
     <div class="card">
-      <img  class="img-thumbnail"  src="./assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="../assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
       <h1>Adivina el número secreto</h1>
       <p class="title">Juega de estrategia</p>
       <p>UTN FRA </p>
