--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -20,7 +20,7 @@
           <a routerLink="/Juegos">
             <div class="media">
               <div class="media-left">
-                    <img src="./assets/imagenes/saladejuegos.png" class="media-object imagenDeMenu" >
+                    <img src="../assets/imagenes/saladej.jpg" class="media-object imagenDeMenu" >
               </div>
               <div class="media-body">
                 <h4 class="media-heading">Juegos</h4>
@@ -34,7 +34,7 @@
             <a routerLink="/Listado">
               <div class="media">
                   <div class="media-left">
-                      <img src="./assets/imagenes/listado.jpg" class="media-object imagenDeMenu" >
+                      <img src="../assets/imagenes/listado.jpg" class="media-object imagenDeMenu" >
                     </div>
                 <div class="media-body">
                   <h4 class="media-heading">Listados de resultados</h4>
@@ -48,25 +48,11 @@
           <a routerLink="/Juegos">
             <div class="media">
                 <div class="media-left">
-                    <img src="./assets/imagenes/Configuracion.png" class="media-object imagenDeMenu" >
+                    <img src="../assets/imagenes/Configuracion.png" class="media-object imagenDeMenu" >
                   </div>
               <div class="media-body">
                 <h4 class="media-heading">Configuraci&oacute;n</h4>
                 <p>Ajustes de la aplicacion y los métodos de autentificación</p>
-              </div>
-             
-            </div> 
-          </a>
-        </li>
-        <li class="list-group-item list-group-item-warning">
-          <a routerLink="/Jugadores">
-            <div class="media">
-                <div class="media-left">
-                    <img src="./assets/imagenes/jugadores.png" class="media-object imagenDeMenu" >
-                  </div>
-              <div class="media-body">
-                <h4 class="media-heading">Jugadores</h4>
-                <p>Listado de jugadores</p>
               </div>
              
             </div> 
