--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -6,13 +6,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="./">Sala De Juegos</a>
+        <a class="navbar-brand" href="/Principal">Sala De Juegos</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="./QuienSoy#quien">Quien</a></li>
-          <li><a href="/TP_LAV4_2017/QuienSoy#que">Ques es</a></li>
-          <li><a href="./QuienSoy#donde">Donde</a></li>
+          <li><a href="/QuienSoy#quien">Quien</a></li>
+          <li><a href="/QuienSoy#que">Ques es</a></li>
+          <li><a href="/QuienSoy#donde">Donde</a></li>
         </ul>
       </div>
     </div>
@@ -21,7 +21,7 @@
   <!-- First Container -->
   <div id ="quiwn"class="container-fluid bg-1 text-center">
     <h3 class="margin">Quién Soy?</h3>
-    <img src="./assets/imagenes/quiensoy.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+    <img src="/assets/imagenes/quiensoy.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
     <h3>Soy Un alumno de la UTN FRA</h3>
   </div>
   
@@ -41,15 +41,15 @@
     <div class="row">
       <div class="col-sm-4">
         <p>Con las tecnologias WEB que permiten desarrollar aplicaciones multiplataforma</p>
-        <img src="./assets/imagenes/quiensoy1.png" class="img-responsive margin imagenDeQuienSoy"  alt="Image">
+        <img src="/assets/imagenes/quiensoy1.png" class="img-responsive margin imagenDeQuienSoy"  alt="Image">
       </div>
       <div class="col-sm-4"> 
         <p>Principalmente orientada a la experiencia del usuario, garantizando que su funcionamieto sea fluido y pensado en el comportamiento del usuario y en la funcionalidad.</p>
-        <img src="./assets/imagenes/quiensoy2.jpg" class="img-responsive margin imagenDeQuienSoy" alt="Image">
+        <img src="/assets/imagenes/quiensoy2.jpg" class="img-responsive margin imagenDeQuienSoy" alt="Image">
       </div>
       <div class="col-sm-4"> 
         <p>Para los sistemas operativos lideres en el mercado del consumo masivo</p>
-        <img src="./assets/imagenes/quiensoy3.png" class="img-responsive margin imagenDeQuienSoy" alt="Image">
+        <img src="/assets/imagenes/quiensoy3.png" class="img-responsive margin imagenDeQuienSoy" alt="Image">
       </div>
     </div>
   </div>
