--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.fondo{
+   
+        background:#080E07 url('http://www.swiss-net.com.ar/wp-content/uploads/Fondo-negro-con-estructura-en-lineas-746551.jpg') no-repeat center center;
+        background-size:100% 100%;
+      
+    
+    
+}
