logica de Juego anagrama

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 .fondo{
    
-        background:#080E07 url('http://www.swiss-net.com.ar/wp-content/uploads/Fondo-negro-con-estructura-en-lineas-746551.jpg') no-repeat center center;
+        background:#43A831 ;
+    /*    background:#080E07 url('http://www.swiss-net.com.ar/wp-content/uploads/Fondo-negro-con-estructura-en-lineas-746551.jpg') no-repeat center center;*/
         background-size:100% 100%;
       
     
