--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -50,4 +50,17 @@
       <a href="#"><i class="fa fa-facebook"></i></a> 
       <p>           <button class="button"  (click)="Juego('Anagrama')">Jugar</button></p>
     </div>
+
+    <div class="card">
+        <img  class="img-thumbnail"  src="../assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
+        <h1>Adivina el número secreto</h1>
+        <p class="title">Juega de estrategia</p>
+        <p>UTN FRA </p>
+        
+        <a href="#"><i class="fa fa-dribbble"></i></a> 
+        <a href="#"><i class="fa fa-twitter"></i></a> 
+        <a href="#"><i class="fa fa-linkedin"></i></a> 
+        <a href="#"><i class="fa fa-facebook"></i></a> 
+        <p>           <button class="button"  (click)="Juego('miJuego')">Jugar</button></p>
+      </div>
   </div>
