--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -1,7 +1,10 @@
-<div class="container" >
-    <div class="card">
+
+<link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" >
+  <div class="fuente">
+    
+  <div class="card">
       <img class="img-thumbnail"   src="../assets/imagenes/cerebro.jpg" alt="Avatar" style="width:100%">
-      <h1>Velocidad y agilidad aritmética </h1>
+      <h1 >Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
   
@@ -64,3 +67,4 @@
         <p>           <button class="button"  (click)="Juego('miJuego')">Jugar</button></p>
       </div>
   </div>
+</div>
