cambio de fotos y estilos

--- a/src/app/componentes/adivina-el-numero/adivina-el-numero.component.html
+++ b/src/app/componentes/adivina-el-numero/adivina-el-numero.component.html
@@ -2,9 +2,12 @@
 <!--app-menu></app-menu-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div style="text-align:center">
-  <h1>
-    {{nuevoJuego.nombre}}!
-  </h1>
+ 
+  <h1 class=centrado> 
+      <img class="img-thumbnail"   src="../assets/imagenes/numerosecreto.gif" alt="Avatar" style="width:110px">
+      {{nuevoJuego.nombre}}!
+      <img class="img-thumbnail"   src="../assets/imagenes/numerosecreto.gif" alt="Avatar" style="width:110px">
+    </h1> 
  </div>
 <h2></h2>
 <form name="juego">
