--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -2,8 +2,8 @@
 <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" >
   <div class="fuente">
     
-  <div class="card">
-      <img class="img-thumbnail"   src="../assets/imagenes/cerebro.jpg" alt="Avatar" style="width:100%">
+  <div class="card fuente">
+      <img class="img-thumbnail"   src="../assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
       <h1 >Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
@@ -17,7 +17,7 @@
     </div>
   
     <div class="card">
-      <img class="img-thumbnail" src="../assets/imagenes/ppt.png" alt="Avatar" style="width:100%">
+      <img class="img-thumbnail" src="../assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
       <h1>Piedra Papel o Tijera</h1>
       <p class="title">Juega contra la máquina</p>
       <p>UTN FRA </p>
@@ -29,9 +29,9 @@
       <p>           <button class="button"  (click)="Juego('PPT')">Jugar</button></p>
     </div>
     <div class="card">
-      <img  class="img-thumbnail"  src="../assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
+      <img  class="img-thumbnail"  src="../assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
       <h1>Adivina el número secreto</h1>
-      <p class="title">Juega de estrategia</p>
+      <p class="title">Juego de estrategia</p>
       <p>UTN FRA </p>
       
       <a href="#"><i class="fa fa-dribbble"></i></a> 
@@ -42,9 +42,9 @@
     </div>
 
     <div class="card">
-      <img  class="img-thumbnail"  src="../assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
-      <h1>Adivina el número secreto</h1>
-      <p class="title">Juega de estrategia</p>
+      <img  class="img-thumbnail"  src="../assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
+      <h1>Anagrama</h1>
+      <p class="title">Ordena la palabra</p>
       <p>UTN FRA </p>
       
       <a href="#"><i class="fa fa-dribbble"></i></a> 
@@ -55,9 +55,9 @@
     </div>
 
     <div class="card">
-        <img  class="img-thumbnail"  src="../assets/imagenes/adivina.png" alt="Avatar" style="width:100%">
-        <h1>Adivina el número secreto</h1>
-        <p class="title">Juega de estrategia</p>
+        <img  class="img-thumbnail"  src="../assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
+        <h1>Adivina la pelicula</h1>
+        <p class="title">Juego de velocidad</p>
         <p>UTN FRA </p>
         
         <a href="#"><i class="fa fa-dribbble"></i></a> 
