--- a/src/app/componentes/anagrama/anagrama.component.html
+++ b/src/app/componentes/anagrama/anagrama.component.html
@@ -27,7 +27,11 @@
     
       <div id="msj">{{Mensajes}}</div>
     </div> -->
-
+    <h1 class=centrado> 
+        <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
+        {{nuevoJuego.nombre}}!
+        <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
+      </h1> 
     <div class="container-fluid text-center">    
       <div class="row content">
         <div class="col-sm-2 sidenav">
@@ -35,9 +39,8 @@
         <div class="col-sm-8 text-left"> 
           <div class="container">
             <div style="text-align:center">
-              <h1>
-                {{nuevoJuego.nombre}}!
-              </h1>
+             
+             
              </div>
             
             <form name="juego" >
