--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,4 +1,5 @@
 <app-cabecera>  </app-cabecera>
+<link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" ></div>
 
 
 
@@ -61,4 +62,22 @@
        
         
       </ul>
+
+      
+          <div class="fuente">
+              <a routerLink="/Juegos">
+          <div class="card">
+              <img class="img-thumbnail"   src="../assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
+              <h1 >JUEGOS </h1>
+              <p class="title">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
+            
+          
+              <a href="#"><i class="fa fa-dribbble"></i></a> 
+              <a href="#"><i class="fa fa-twitter"></i></a> 
+              <a href="#"><i class="fa fa-linkedin"></i></a> 
+              <a href="#"><i class="fa fa-facebook"></i></a> 
+              <p>           <button class="button"  (click)="Juego('Agilidad')">Comenzar a Jugar!</button></p>
+           
+            </div>
+          </a>
 </div>
