--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -4,9 +4,9 @@
 
 
  
-<div class="container" >
+<div class="container fuente" >
    
-    <ul class="list-group">
+    <!--ul class="list-group">
         <li class="list-group-item list-group-item-danger">
            
                 <div class="media-body">
@@ -61,12 +61,12 @@
         </li>
        
         
-      </ul>
+      </ul-->
 
       
           <div class="fuente">
               <a routerLink="/Juegos">
-          <div class="card">
+          <div  class="col-sm-4">
               <img class="img-thumbnail"   src="../assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
               <h1 >JUEGOS </h1>
               <p class="title">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
@@ -80,4 +80,22 @@
            
             </div>
           </a>
+</div>
+
+<div class="fuente">
+    <a routerLink="/ListadoJugador">
+<div  class="col-sm-4">
+    <img class="img-thumbnail"   src="../assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
+    <h1 >Listados de Resultados </h1>
+    <p class="title">Los listados de los resultados con ordenamiento y busqueda.</p>
+  
+
+    <a href="#"><i class="fa fa-dribbble"></i></a> 
+    <a href="#"><i class="fa fa-twitter"></i></a> 
+    <a href="#"><i class="fa fa-linkedin"></i></a> 
+    <a href="#"><i class="fa fa-facebook"></i></a> 
+    <p>           <button class="button"  (click)="Juego('Agilidad')">Ver Listado</button></p>
+ 
+  </div>
+</a>
 </div>
