--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -21,17 +21,25 @@
   <!-- First Container -->
   <div id ="quiwn"class="container-fluid bg-1 text-center">
     <h3 class="margin">Quién Soy?</h3>
-    <img src="/assets/imagenes/quiensoy.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-    <h3>Soy Un alumno de la UTN FRA</h3>
+    <img src="/assets/imagenes/yo.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
+    <h3>Vanesa Montecinos</h3>
   </div>
   
   <!-- Second Container -->
   <div id ="que" class="container-fluid bg-2 text-center">
-    <h3 class="margin">Esto es un trabajo práctico</h3>
-    <p>Cada universidad, cada facultad, cada carrera y obviamente cada materia en particular tiene estrategias didácticas y formas de evaluación diferentes. A pesar de que en muchos casos las universidades intentan estandarizar la forma de dictar clase para generar un orden en las planificaciones cuatrimestre a cuatrimestre, las formas de evaluación son elementales tanto para las instituciones y profesores como para los alumnos. A través de la evaluación formativa el educador busca información en el alumno para lograr comprender cómo se está
-      produciendo el proceso de aprendizaje y poder reajustar los objetivos pedagógicos. Y para el alumno es una muestra del progreso que está logrando y si puede aplicar, materializar y darle visibilidad a la comprensión del tema. Según Black y William (1998), la evaluación formativa, ayuda a que los estudiantes sean independientes a la hora del aprendizaje, es decir, se presenta como receptor, autorregulador y centro de esa misma evaluación. </p>
-    <a href="#" class="btn btn-default btn-lg">
-      <span class="glyphicon glyphicon-file"></span> Descargar PDF
+    <h1></h1>
+    <h3 class="margin">Adivinanza y Acertijos</h3>
+
+    <div  class="col-sm-4">
+        <img class="img-thumbnail"   src="../assets/imagenes/acertijo.gif" alt="Avatar" style="width:100%">
+    </div>
+    <p>El juego va mostrar una imagen en pantalla. Esta imagen puede estar relacionada al nombre de una pelicula,
+       al nombre de un actor o puede ser un acertijo matematico. Una vez que comienza el juego se tendra 15 segundos para completar 
+       la frase o numero, si no se responde dentro de ese lapso de tiempo se considera que el jugador perdio.
+     </p>
+     <p>Intentalo!!</p>
+    <a href='/Juegos/miJuego' class="btn btn-default btn-lg">
+      <span class="glyphicon"></span> Ir al Juego
     </a>
   </div>
   
@@ -56,5 +64,5 @@
   
   <!-- Footer -->
   <footer class="container-fluid bg-4 text-center">
-    <p>Modificado por <a href="https://www.octavio.com.ar">www.octavio.com.ar</a></p> 
+    <p>Modificado por <a href="https://www.octavio.com.ar">Vanesa Montecinos</a></p> 
   </footer>
