--- a/src/app/componentes/adivina-el-numero/adivina-el-numero.component.html
+++ b/src/app/componentes/adivina-el-numero/adivina-el-numero.component.html
@@ -1,14 +1,14 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!--app-menu></app-menu-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div style="text-align:center">
+<div style="text-align:center" class="container">
  
-  <h1 class=centrado> 
+  <h1 class="centrado  cursiva"> 
       <img class="img-thumbnail"   src="../assets/imagenes/numerosecreto.gif" alt="Avatar" style="width:110px">
       {{nuevoJuego.nombre}}!
       <img class="img-thumbnail"   src="../assets/imagenes/numerosecreto.gif" alt="Avatar" style="width:110px">
     </h1> 
- </div>
+ 
 <h2></h2>
 <form name="juego">
 
@@ -27,3 +27,4 @@
 
 </form>
 <div id="snackbar">{{Mensajes}}</div>
+</div>
