--- a/src/app/componentes/cabecera/cabecera.component.css
+++ b/src/app/componentes/cabecera/cabecera.component.css
@@ -8,7 +8,9 @@
     background-size: cover;
     position: relative;
 }
-
+.fuente{
+    color: #1D1717;
+}
 
 .hero-text {
 text-align: center;
@@ -16,7 +18,8 @@ position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
-color: #3E06B0;
+/*color: #3E06B0;*/
+color: #1F1B1B;
 }
 
 .hero-text a {
@@ -24,13 +27,16 @@ border: none;
 outline: 0;
 display: inline-block;
 padding: 10px 25px;
-color: black;
+color: #1F1B1B;
 background-color: #ddd;
 text-align: center;
 cursor: pointer;
 }
 
 .hero-text a:hover {
-background-color: #555;
-color: white;
+background-color: #CFC2C2;
+color: #181616;
 }
+.cursiva{
+    font-family: 'Rye', cursive;;
+  }
