--- a/src/app/componentes/menu-card/menu-card.component.html
+++ b/src/app/componentes/menu-card/menu-card.component.html
@@ -1,10 +1,11 @@
 
 <link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" >
-  <div class="fuente">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
+  <div  >
     
-  <div class="card fuente">
+  <div class="card ">
       <img class="img-thumbnail"   src="../assets/imagenes/pensando.gif" alt="Avatar" style="width:100%">
-      <h1 >Velocidad y agilidad aritmética </h1>
+      <h1 class="cursiva" >Velocidad y agilidad aritmética </h1>
       <p class="title">Juego de agilidad mental</p>
       <p>UTN FRA </p>
   
@@ -18,7 +19,7 @@
   
     <div class="card">
       <img class="img-thumbnail" src="../assets/imagenes/ppt2.gif" alt="Avatar" style="width:100%">
-      <h1>Piedra Papel o Tijera</h1>
+      <h1 class="cursiva" >Piedra Papel  o Tijera</h1>
       <p class="title">Juega contra la máquina</p>
       <p>UTN FRA </p>
       
@@ -30,7 +31,7 @@
     </div>
     <div class="card">
       <img  class="img-thumbnail"  src="../assets/imagenes/adivina.gif" alt="Avatar" style="width:100%">
-      <h1>Adivina el número secreto</h1>
+      <h1 class="cursiva">Adivina el número secreto</h1>
       <p class="title">Juego de estrategia</p>
       <p>UTN FRA </p>
       
@@ -43,7 +44,7 @@
 
     <div class="card">
       <img  class="img-thumbnail"  src="../assets/imagenes/anagrama.gif" alt="Avatar" style="width:100%">
-      <h1>Anagrama</h1>
+      <h1 class="cursiva">Anagrama</h1>
       <p class="title">Ordena la palabra</p>
       <p>UTN FRA </p>
       
@@ -56,7 +57,7 @@
 
     <div class="card">
         <img  class="img-thumbnail"  src="../assets/imagenes/adivinanza.gif" alt="Avatar" style="width:100%">
-        <h1>Adivina la pelicula</h1>
+        <h1 class="cursiva">Adivinanza y Acertijos</h1>
         <p class="title">Juego de velocidad</p>
         <p>UTN FRA </p>
         
