--- a/src/app/componentes/principal/principal.component.html
+++ b/src/app/componentes/principal/principal.component.html
@@ -1,6 +1,5 @@
 <app-cabecera>  </app-cabecera>
-<link href="https://fonts.googleapis.com/css?family=Rozha+One" rel="stylesheet"><div class="container" ></div>
-
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
 
 
  
@@ -68,7 +67,7 @@
               <a routerLink="/Juegos">
           <div  class="col-sm-4">
               <img class="img-thumbnail"   src="../assets/imagenes/ruleta.gif" alt="Avatar" style="width:100%">
-              <h1 >JUEGOS </h1>
+              <h1 class="cursiva" >JUEGOS </h1>
               <p class="title">El método lúdico es un conjunto de estrategias diseñadas para crear un ambiente de armonía en los estudiantes que están inmersos en el proceso de aprendizaje. Este método busca que los alumnos se apropien de los temas impartidos por los docentes utilizando el juego.</p>
             
           
@@ -86,7 +85,7 @@
     <a routerLink="/ListadoJugador">
 <div  class="col-sm-4">
     <img class="img-thumbnail"   src="../assets/imagenes/listado.gif" alt="Avatar" style="width:100%">
-    <h1 >Listados de Resultados </h1>
+    <h1 class="cursiva" >Listados de Resultados </h1>
     <p class="title">Los listados de los resultados con ordenamiento y busqueda.</p>
   
 
