--- a/src/app/componentes/registro/registro.component.html
+++ b/src/app/componentes/registro/registro.component.html
@@ -25,8 +25,10 @@
         <p>creando la cuenta aceptando los<a  onclick="document.getElementById('id01').style.display='none'"  >Terminos y condiciones</a>.</p>
   
         <div class="clearfix">
-          <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Me arrepenti</button>
-          <button type="submit" class="signupbtn">Registrarme</button>
+            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Me arrepenti</button>
+            
+          <!--button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Me arrepenti</button-->
+          <button type="submit" class="signupbtn" onclick="Registrarme()">Registrarme</button>
         </div>
       </div>
     </form>
