--- a/src/app/componentes/adivina-mas-listado/adivina-mas-listado.component.html
+++ b/src/app/componentes/adivina-mas-listado/adivina-mas-listado.component.html
@@ -1,5 +1,6 @@
 
 <app-adivina-el-numero (enviarJuego)="tomarJuegoTerminado($event)">   </app-adivina-el-numero> 
-<h1> listado </h1>
+
+<h1 class="blanco"> Listado de resultados</h1>
 <app-listado-de-resultados [listado]="listadoParaCompartir"> </app-listado-de-resultados>
 
