--- a/src/app/componentes/anagrama/anagrama.component.css
+++ b/src/app/componentes/anagrama/anagrama.component.css
@@ -17,4 +17,20 @@
 }
 .centrado{
   text-align: center; 
+  color: white;
+}
+.container {
+  padding: 2px 16px;
+  background-color:#090A09;
+  background-size:100% 100%;
+  align-content: center;
+  align-items: center;
+  align-self: auto;
+  
+}
+.cursiva{
+  font-family: 'Rye', cursive;;
+}
+.verde{
+  color: green;
 }
