--- a/src/app/componentes/anagrama/anagrama.component.html
+++ b/src/app/componentes/anagrama/anagrama.component.html
@@ -27,14 +27,14 @@
     
       <div id="msj">{{Mensajes}}</div>
     </div> -->
-    <h1 class=centrado> 
+    <div class="container">
+    <h1 class="centrado cursiva"> 
         <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
         {{nuevoJuego.nombre}}!
         <img class="img-thumbnail"   src="../assets/imagenes/a.gif" alt="Avatar" style="width:110px">
       </h1> 
     <div class="container-fluid text-center">    
-      <div class="row content">
-        <div class="col-sm-2 sidenav">
+      
         </div>
         <div class="col-sm-8 text-left"> 
           <div class="container">
@@ -63,14 +63,13 @@
                
               </div>
               <div>
-                <h2 [hidden]="!nuevoJuego.gano">usted adivino la palabra</h2>
+                <h2 class="verde" [hidden]="!nuevoJuego.gano">usted adivino la palabra</h2>
                 <h3 [hidden]="nuevoJuego.gano">usted aún no gano </h3>
               </div>
             </form>
             
               <div id="msj"><h1>{{Mensajes}}</h1></div>
             </div>
-        <div class="col-sm-2 sidenav">
-        </div>
-      </div>
-    </div>
+       
+ 
+  </div>
