--- a/src/app/componentes/cabecera/cabecera.component.html
+++ b/src/app/componentes/cabecera/cabecera.component.html
@@ -1,6 +1,8 @@
-<div class="panel panel-default">
-  <div class="hero-text">
-      <h1 style="font-size:50px">Sala de Juegos</h1>
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Rye|Shrikhand|Yellowtail" rel="stylesheet">
+
+ <div class="panel panel-default">
+  <div class="hero-text fuente">
+      <h1 class=" cursiva" style="font-size:50px">Sala de Juegos</h1>
       <p>Vanesa Montecinos</p>
       <a href="https://github.com/vanesamontecinos"target="_blank">en GitHub <i class="fa fa-github"></i></a>
       <a  routerLink="/QuienSoy" >Quien Soy? <i class="fa fa-user"></i></a>
