--- a/src/app/componentes/menu-card/menu-card.component.css
+++ b/src/app/componentes/menu-card/menu-card.component.css
@@ -22,8 +22,14 @@ img {
     padding: 2px 16px;
     background-color:#090A09;
     background-size:100% 100%;
+    align-content: center;
+    align-items: center;
+    align-self: auto;
+    
 }
-
+.cursiva{
+  font-family: 'Rye', cursive;;
+}
 
 .button{
     margin-left: 1px;
@@ -59,6 +65,4 @@ img {
     transform: translateY(4px);
   }
 
-  .fuente{
-    font-family: 'Rozha One', serif;
-  }
+  
