--- a/src/app/componentes/piedrapapeltijera/piedrapapeltijera.component.css
+++ b/src/app/componentes/piedrapapeltijera/piedrapapeltijera.component.css
@@ -18,6 +18,13 @@
 .centrado{
     text-align: center; 
 }
+.fuente{
+    color: #C0E79E;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Shrikhand', cursive;
+    border-left: 20px solid black;
+   
+}
 
 .CajaUno{
     padding: 2px 16px;
@@ -29,3 +36,21 @@
     background-color:#023802; 
     color: white;
 }
+.centrado{
+    text-align: center; 
+    color: white;
+  }
+  .container {
+    padding: 2px 16px;
+    background-color:#090A09;
+    background-size:100% 100%;
+    align-content: center;
+    align-items: center;
+    align-self: auto;
+    
+  }
+  
+  .verde{
+    color: #87B487;
+    background-color: #000000;
+  }
