--- a/src/app/componentes/quien-soy/quien-soy.component.html
+++ b/src/app/componentes/quien-soy/quien-soy.component.html
@@ -64,5 +64,5 @@
   
   <!-- Footer -->
   <footer class="container-fluid bg-4 text-center">
-    <p>Modificado por <a href="https://www.octavio.com.ar">Vanesa Montecinos</a></p> 
+    <p>Modificado por <a href="https:/github.com/vanesamontecinos">Vanesa Montecinos</a></p> 
   </footer>
